Add adrian image

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <p class="testimonial__text">"I stopped hiding in photos. I look like myself again, and that feels amazing."</p>
                     </div>
                     <div class="testimonial__author">
-                        <img src="images/client-charlie.jpg" alt="Client testimonial" loading="lazy" class="testimonial__image">
+                        <img src="images/client-adrian.jpg" alt="Client testimonial" loading="lazy" class="testimonial__image">
                         <div class="testimonial__details">
                             <h4 class="testimonial__name">Aidan</h4>
                             <p class="testimonial__role">Age 36</p>
